[package]
name = "raqote"
version = "0.8.5"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"
description = "2D graphics library."
documentation = "https://docs.rs/raqote"
readme = "README.md"
repository = "https://github.com/jrmuizel/raqote"
license = "BSD-3-Clause"
keywords = ["2d", "graphics"]
categories = ["graphics"]

[dependencies]
euclid = "0.22"
font-kit = { version = "0.14", optional = true }
lyon_geom = "1.0"
pathfinder_geometry = { version = "0.5", optional = true }
png = { version = "0.17", optional = true }
sw-composite = "0.7.15"
typed-arena = "2.0"

[features]
default = ["png", "text"]
text = ["font-kit", "pathfinder_geometry"]
